force-app/main/default/objects/Quick_Quote_Line_Item__c/Quick_Quote_Line_Item__c.object-meta.xml
<CustomObject>
    <description>An object used specifically in quick quote generation. Does not roll up values to the qutote.</description>
    <label>Quick Quote Line Item</label>
    <nameField>
        <label>Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quick Quote Line Item</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>