force-app/main/default/objects/Quick_Quote_Line_Item__c/fields/Artist__c.field-meta.xml
<CustomField>
    <fullName>Artist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Artist</label>
    <referenceTo>Artist__c</referenceTo>
    <relationshipLabel>Quick Quote Line Item</relationshipLabel>
    <relationshipName>Quick_Quote_Line_Item</relationshipName>
    <type>Lookup</type>
</CustomField>