force-app/main/default/objects/Quick_Quote_Line_Item__c/fields/Artist_Fee_Definition__c.field-meta.xml
<CustomField>
    <fullName>Artist_Fee_Definition__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Artist Fee Definition</label>
    <referenceTo>Artist_Fee_Definition__c</referenceTo>
    <relationshipLabel>Quick Quote Line Item</relationshipLabel>
    <relationshipName>Quick_Quote_Line_Item</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>