force-app/main/default/objects/Quick_Quote_Line_Item__c/fields/Flight_Definition__c.field-meta.xml
<CustomField>
    <fullName>Flight_Definition__c</fullName>
    <inlineHelpText>How many flights and ground travel is needed for this booking ?</inlineHelpText>
    <label>Flight Definition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>