force-app/main/default/objects/Quick_Quote_Line_Item__c/fields/Performance_Fee__c.field-meta.xml
<CustomField>
    <fullName>Performance_Fee__c</fullName>
    <description>References the Price of the Performance. Used in Screenflow</description>
    <formula>Artist_Fee_Definition__r.Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Performance Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>