force-app/main/default/objects/Quick_Quote_Line_Item__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>Quick Quote Line Item</relationshipLabel>
    <relationshipName>Quick_Quote_Line_Item</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>