force-app/main/default/objects/Quick_Quote_Line_Item__c/fields/Total_Artist_Extras__c.field-meta.xml
<CustomField>
    <fullName>Total_Artist_Extras__c</fullName>
    <inlineHelpText>A Roll up of al the Artist Extras</inlineHelpText>
    <label>Total Artist Extras</label>
    <summarizedField>Extra_Line_Item__c.Price__c</summarizedField>
    <summaryFilterItems>
        <field>Extra_Line_Item__c.Type__c</field>
        <operation>equals</operation>
        <value>Artist</value>
    </summaryFilterItems>
    <summaryForeignKey>Extra_Line_Item__c.Quick_Quote_Line_Item__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>