force-app/main/default/objects/Quick_Quote_Line_Item__c/fields/Total_Incl_VAT__c.field-meta.xml
<CustomField>
    <fullName>Total_Incl_VAT__c</fullName>
    <formula>Total_Excl_VAT__c + 
IF( Artist__r.Charges_VAT__c,
(Total_Excl_VAT__c*
($Setup.VocalEventsSettings__c.VAT__c)),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Incl VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>