force-app/main/default/objects/Quick_Quote_Line_Item__c/fields/Travel_Fee_Artist__c.field-meta.xml
<CustomField>
    <fullName>Travel_Fee_Artist__c</fullName>
    <inlineHelpText>The Travel fee for the Artist</inlineHelpText>
    <label>Travel Fee (Artist)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>