force-app/main/default/objects/Quick_Quote_Line_Item__c/fields/Travel_Fee_Technical__c.field-meta.xml
<CustomField>
    <fullName>Travel_Fee_Technical__c</fullName>
    <formula>IF(Artist_Fee_Definition__r.Artist__r.Travels_Alone__c, 
 Travel_Fee_Artist__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the Artist Travels alone, Technical Travel fee applies.</inlineHelpText>
    <label>Travel Fee (Technical)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>