force-app/main/default/objects/Quick_Quote_Line_Item__c/fields/VAT__c.field-meta.xml
<CustomField>
    <fullName>VAT__c</fullName>
    <formula>IF(Artist__r.Charges_VAT__c,
Total_Excl_VAT__c *  
IF(CreatedDate &lt; DATETIMEVALUE(DATE(2025, 5, 1)),
$Setup.VocalEventsSettings__c.VAT__c,
$Setup.VocalEventsSettings__c.VAT_Post_May_2025__c ),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>