force-app/main/default/objects/Quick_Quote_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Artist__c</columns>
    <columns>Artist_Fee_Definition__c</columns>
    <columns>Quote__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>